# fireforex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  PROGRESS.md  README.md  demo_speed.py  launch_fire_forex.bat  pyproject.toml  requirements-web.txt  requirements.txt  run.py  snapshot-home.md
.claude/: settings.json
.claude/commands/: handoff.md
.claude/hooks/: check-architecture-map.sh  session-start.sh  update-paperwork.sh
.claude/rules/: python-style.md  rust-style.md  testing.md  trading.md  workflow.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  pr-checklist.yml
app/: __init__.py  api.py  baselines.py  jobs.py  live_jobs.py  live_state_puller.py  models.py  pairs_scan.py  routes.py
app/static/: app.js  index.html  styles.css
artifacts/: _pre_pr_diff.patch  baseline.json  demo_speed.html  history.csv  review-codex-mini.md  system_audit_report_2026-04-19.md
core/: Cargo.toml
core/src/: constants.rs  filter.rs  lib.rs  metrics.rs  sl_tp.rs  trade_full.rs
deploy/: live_config.json
deploy/instances/: active.json  complexity_L10_EUR_USD_M15_20260422_111232__20260422_111326.json  complexity_L10_EUR_USD_M15_20260422_111400__20260422_111414.json  complexity_L10_EUR_USD_M15_20260422_111436__20260422_111458.json  complexity_L10_EUR_USD_M15_20260424_100942__20260424_101044.json  complexity_L10_EUR_USD_M15_20260424_101119__20260424_101142.json  complexity_L10_EUR_USD_M15_20260424_101204__20260424_101238.json
docs/: 2026-04-19-adding-the-chandelier-knob.md  2026-04-19-the-breakeven-offset-bug.md  2026-04-19-the-exec-basic-bug.md  2026-04-19-the-partial-close-bug.md  2026-04-19-the-signal-filter-bugs.md  2026-04-19-the-trailing-bug.md  ARCHITECTURE.md  ARCHITECTURE_MAP.md  CHANGES.md  REVIEW.md  ROADMAP.md  bug-hunting-research-brief.md  exec-full-fix-plan.md  knob-explanations.md  metrics.md  next-session-handover.md  rust-wishlist.md
docs/live/: ARCHITECTURE-multi-instance.md  BUG-variant-id-not-stable-2026-04-22.md  HANDOVER-2026-04-22-day.md  HANDOVER-parity-status.md  HOW-TO-DEPLOY.md  LIVE-TRADE-ELEMENT.md  README.md  RECONCILE.md  SESSION-2026-04-21-end.md  SESSION-2026-04-21-evening.md  SESSION-2026-04-21-night-handover.md  SESSION-2026-04-21.md  SESSION-RESUME.md  VPS-HANDOVER.md  WAKE-UP-2026-04-22.md  parity-plan-2026-04-24.md
eas/: __init__.py  baseline.json  baseline.py  complex01.json  complex01.py
ff/: VERSION.py  __init__.py  encoding.py  exit_codes.py  harness.py  inspect.py  preflight.py  replay.py  sampler.py  schema.py  schema_json.py  signal_lib.py
ff/cost_realism/: __init__.py  bt_gate.py  cost_table.py  gate_rules.py  overlay.py  slippage_telemetry.py
ff/data/: __init__.py  date_slice.py  downloader.py  groups.py  health.py  inventory.py  m1_bi5_downloader.py  mt5_m1_downloader.py  mt5_tick_downloader.py  resample.py  tick_downloader.py
ff/defaults/: __init__.py  complexity.py  overrides.py  pair_tf.yaml  volatility.py
ff/live/: __init__.py  broker_mt5.py  execution_guard.py  exit_manager.py  frozen_signal.py  parity_guard.py  reconcile.py  runner.py  runner_service.py  state_sync.py
fire_forex_v0/: __init__.py  _bootstrap.py  backtest.py  data.py  optimize.py  params.py  strategy.py
scripts/: __init__.py  bench.py  build_cost_table.py  build_forensic_report.py  build_trade_comparison.py  calibrate_for_parity.py  check_map.py  daily_check.sh  daily_parity_check.py  diagnose_vps.py  fetch_mt5_history.py  fetch_mt5_ticks.py  ff_kill_server.bat  ff_kill_server.ps1  ff_restart_server.bat  ff_restart_server.ps1  ff_start_server.ps1  finalize_pr.sh  import_mt5_report.py  merge_pr.ps1  merge_pr.sh  migrate_best_trial_fingerprint.py  mt5_status.py  pre-pr.ps1  reconcile_live.py  reset_live_day.py  run_single.py  run_sweep.py  runner_launcher.bat  show_backtest.py  sync_main.sh  vps_bootstrap.ps1
scripts/desktop/: Check Fire Forex.bat  Deploy Fire Forex.bat  Diagnose Fire Forex.bat  Import MT5 Report.bat  Reset Live Day (VPS).bat  Restart Fire Forex (laptop).bat  Show MT5 Status.bat
tests/: test_broker_mt5_submit.py  test_check_map.py  test_complexity.py  test_data_health.py  test_data_inventory.py  test_date_slice.py  test_downloader.py  test_exit_manager.py  test_frozen_signal.py  test_golden_baseline.py  test_groups.py  test_harness_cost_realism.py  test_knob_sensitivity.py  test_lean_artifact_routes.py  test_live_runner_synthetic.py  test_math_correctness.py  test_metric_key_consistency.py  test_mt5_tick_downloader.py  test_new_metrics.py  test_parity_guard.py  test_path_traversal_routes.py  test_pick_best_adjusted_proxy.py  test_reconcile.py  test_replay.py  test_resample.py  test_routes_data.py  test_runner_service_multi_instance.py  test_signal_cache.py  test_smoke.py  test_state_sync.py  test_tick_to_m1.py  test_trade_log_roundtrip.py  test_variant_fingerprint.py
tests/cost_realism/: test_bt_gate.py  test_cost_table.py  test_overlay.py  (+3 more)
(+56 files in other folders)
