[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fire_forex"
version = "0.1.0"
requires-python = ">=3.12"

[tool.maturin]
manifest-path = "core/Cargo.toml"
module-name = "ff_core"

[tool.pytest.ini_options]
markers = [
    "slow: long-running end-to-end tests (~1s+); skip with -m 'not slow'",
]

[tool.ruff]
target-version = "py312"
line-length = 140
extend-exclude = [
    "artifacts",
    "core/target",
    ".venv",
    "_tmp_*.py",
    "pytest-of-*",
    "pytest-tmp",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E741 is the only codebase-wide ignore: `o,h,l,c` (open/high/low/close) is
# domain-standard in forex code and renaming would obscure intent.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# Scripts often capture subprocess results in named variables for clarity
# even when the value isn't consumed; that's intentional in operational code.
"scripts/*.py"   = ["F841", "E402"]
"app/live_*.py"  = ["F841"]
# Tight numeric helpers in the engine sometimes use one-line conditional /
# semicolon-separated statements where a layout aids readability.
"ff/encoding.py" = ["E701", "E702"]
# HTML template strings — wrapping would break the rendered report.
"scripts/build_forensic_report.py" = ["E501", "F841", "E402"]
# Validation micro-scripts run at module-import to print results, so imports
# below module-level setup are intentional.
"docs/validation/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
